--- a/src/app/form-builder/form-builder.component.html
+++ b/src/app/form-builder/form-builder.component.html
@@ -1,2 +1,23 @@
-<div>
+<div *ngIf="formJSON">
+
+  <h1>{{ formJSON.name }}</h1>
+  <div class="mt-3">{{ formJSON.description }}</div>
+
+  <div class="mt-3">
+    <form [formGroup]="generatorForm">
+      <div *ngFor="let formControlName of formControlNames; let i = index">
+        <div class="form-group">
+          <label [for]="formControlName">
+            {{ questionsLabel[i] }}
+          </label>
+          <input [id]="formControlName" class="form-control" type="text" [name]="formControlName" [formControlName]="formControlName">
+          <small [id]="formControlName + 'Help'" class="form-text text-muted"
+                 *ngIf="!generatorForm.get(formControlName).valid && generatorForm.get(formControlName).touched">
+            {{ questionsDescription[i] }}
+          </small>
+        </div>
+      </div>
+      <button class="btn btn-primary"></button>
+    </form>
+  </div>
 </div>
