--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-custom">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <ul class="navbar-nav">
       <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
@@ -11,12 +11,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-      <ul class="navbar-nav">
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/form">Form</a>
-        </li>
-      </ul>
+    <div class="collapse navbar-collapse flex-row-reverse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item ml-auto" routerLinkActive="active">
           <a class="nav-link" (click)="onLogin()">Login</a>
