--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
-<div class="container mt-5">
+<div class="container mt-5 main">
   <router-outlet></router-outlet>
 </div>
+<app-footer></app-footer>
