--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,10 +13,10 @@
 
     <div class="collapse navbar-collapse flex-row-reverse" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item ml-auto" routerLinkActive="active">
+        <li class="nav-item ml-auto" routerLinkActive="active" *ngIf="!user">
           <a class="nav-link" (click)="onLogin()">Login</a>
         </li>
-        <li class="nav-item ml-auto" routerLinkActive="active">
+        <li class="nav-item ml-auto" routerLinkActive="active" *ngIf="user">
           <a class="nav-link" (click)="onLogout()">Logout</a>
         </li>
       </ul>
