--- a/src/app/dependency-builder/dependency-builder.component.html
+++ b/src/app/dependency-builder/dependency-builder.component.html
@@ -2,7 +2,8 @@
   <app-question-builder [question]="question"
                         [formControlNames]="formControlNames"
                         [generatorForm]="generatorForm"
-                        [formJson]="formJson">
+                        [formJson]="formJson"
+                        [participationID]="participationID">
   </app-question-builder>
 </ng-container>
 
@@ -12,7 +13,8 @@
       <app-question-builder [question]="question"
                             [formControlNames]="formControlNames"
                             [generatorForm]="generatorForm"
-                            [formJson]="formJson">
+                            [formJson]="formJson"
+                            [participationID]="participationID">
       </app-question-builder>
     </ng-container>
   </ng-container>
