--- a/src/app/dependency-builder/dependency-builder.component.html
+++ b/src/app/dependency-builder/dependency-builder.component.html
@@ -3,7 +3,7 @@
                         [formControlNames]="formControlNames"
                         [generatorForm]="generatorForm"
                         [formJson]="formJson"
-                        [participationID]="participationID">
+                        [activityID]="activityID">
   </app-question-builder>
 </ng-container>
 
@@ -14,7 +14,7 @@
                             [formControlNames]="formControlNames"
                             [generatorForm]="generatorForm"
                             [formJson]="formJson"
-                            [participationID]="participationID">
+                            [activityID]="activityID">
       </app-question-builder>
     </ng-container>
   </ng-container>
