--- a/src/app/survey/page-builder/page-builder.component.html
+++ b/src/app/survey/page-builder/page-builder.component.html
@@ -6,14 +6,14 @@
   <div class="mt-3">
     <form [formGroup]="generatorForm" (ngSubmit)="onSubmit()">
       <ng-container *ngFor="let type of formJson.questions_by_types">
-        <ng-container *ngIf="isParticipant(type.type_name)">
+        <ng-container *ngIf="isParticipant(type.type)">
           <hr>
           <div class='block my-5'>
             <ng-container *ngFor="let a of user.activity">
-              <ng-container *ngIf="a.activity_type === type.type_name">
+              <ng-container *ngIf="a.activity_type === type.type">
                 <div *ngFor="let activityName of a.activity_names; let i = index">
 
-                  <h3 class="mb-4">{{ type.type_name }}<ng-container *ngIf="activityName">: </ng-container>{{ activityName }}</h3>
+                  <h3 class="mb-4">{{ type.type }}<ng-container *ngIf="activityName">: </ng-container>{{ activityName }}</h3>
 
                   <ng-container *ngIf="type.blocks">
                     <ng-container *ngFor="let question of type.questions; let k = index">
