--- a/src/app/survey/page-builder/page-builder.component.html
+++ b/src/app/survey/page-builder/page-builder.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="formJson">
-  <h1>{{ formJson.name }}</h1>
-  <div class="mt-3">
+  <h1 class="survey-title">{{ formJson.name }}</h1>
+  <div class="mt-3 survey-description">
     {{ formJson.description }}
   </div>
   <router-outlet></router-outlet>
